--- a/src/app/pages/stores/stores.component.html
+++ b/src/app/pages/stores/stores.component.html
@@ -1,6 +1,9 @@
 
+
+
 <div class="main-div">
     <h1 class="center">Lista de tiendas</h1>
+    <p class="text-center">Lista de sucursales de nuestra tienda.</p>
     <section class="stores" >
         <mat-card class="example-card" *ngFor="let store of stores" >
             <mat-card-title>{{store.name}}</mat-card-title>
@@ -12,3 +15,10 @@
         </mat-card>
     </section>
 </div>
+
+<mat-grid-list cols="2" rowHeight="2:1">
+    <mat-grid-tile>1</mat-grid-tile>
+    <mat-grid-tile>2</mat-grid-tile>
+    <mat-grid-tile>3</mat-grid-tile>
+    <mat-grid-tile>4</mat-grid-tile>
+  </mat-grid-list>
