agregamso y visualizamos carrito

--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,11 +1,8 @@
 <section class="products">
-    <mat-card class="card" *ngFor="let product of products">
-     <mat-card-title>{{product.name}}</mat-card-title>
-     <mat-card-content>{{product.description}}</mat-card-content>
-     <mat-card-actions>precio:{{product.price}}</mat-card-actions>
-    </mat-card>
+<app-producto  
+
+(addToCartClick)="AddCart($event)"
+[product]="product" 
+*ngFor="let product of products"></app-producto>
 </section>
 
-<pre>
-    {{products | json}}
-</pre>
