--- a/src/app/pages/products/product/producto.component.html
+++ b/src/app/pages/products/product/producto.component.html
@@ -1,1 +1,12 @@
-<h2>producto 1</h2>
+<mat-card class="card" >
+    
+    <mat-card-title>{{product.name}}</mat-card-title>
+    <mat-card-content>{{ product.description}} {{product.description.length > 20 ? '...' : product.description}} </mat-card-content>
+    
+    <mat-card-actions>
+       <button mat-flat-button color="primary" (click)="onClick()">
+           precio:{{product.price | currency}}
+           <mat-icon>add_shopping_cart</mat-icon>
+       </button>
+    </mat-card-actions>
+   </mat-card>
